compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__sized_constant_value.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go() {\n  <<256:64>>\n}\n"
---
----- SOURCE CODE

pub fn go() {
  <<256:64>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../gleam.mjs";

export function go() {
  return toBitArray([sizedInt(256, 64, true)]);
}
