compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__sized_constant_value_requiring_modulus.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<80_000:16>>\n  <<-80_000:16>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<80_000:16>>
  <<-80_000:16>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

function go() {
  toBitArray([56, 128]);
  return toBitArray([199, 128]);
}
