compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__sized_dynamic_value.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(i: Int) {\n  <<i:64>>\n}\n"
---
----- SOURCE CODE

pub fn go(i: Int) {
  <<i:64>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../gleam.mjs";

export function go(i) {
  return toBitArray([sizedInt(i, 64, true)]);
}
